--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,6 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+            document.addEventListener('DomContentLoaded', function() {})
         </script>
     </head>
     <body>
