Wed, Feb 22, 2023, 8:40 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,7 +7,10 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            document.addEventListener('DomContentLoaded', function() {})
+            document.addEventListener('DomContentLoaded', function() {
+                
+
+            });
         </script>
     </head>
     <body>
