--- a/trivia/index.html
+++ b/trivia/index.html
@@ -8,7 +8,10 @@
         <script>
             // TODO: Add code to check answers to questions
             document.addEventListener('DomContentLoaded', function() {
-                
+                function check()
+                {
+                    document.getElementByID("Y")
+                }
 
             });
         </script>
@@ -22,6 +25,13 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
+                <p>
+                    Which team has won the world series the second most times in history?
+                </p>
+                <br>
+                <button type="button" id="1" onclick="check">Houston Astros</button>
+                <button type="button" id="2" onclick="check">St. Louis Cardinals</button>
+                <button type="button" id= "3" onclick ="check">Los Angeles Dodgers</button>
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
