Thu, Feb 23, 2023, 12:55 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -29,9 +29,11 @@
                     Which team has won the world series the second most times in history?
                 </p>
                 <br>
-                <button type="button" id="1" onclick="check">Houston Astros</button>
-                <button type="button" id="2" onclick="check">St. Louis Cardinals</button>
-                <button type="button" id= "3" onclick ="check">Los Angeles Dodgers</button>
+                <div id = "answers">
+                    <button type="button" id="1" onclick="check">Houston Astros</button>
+                    <button type="button" id="2" onclick="check">St. Louis Cardinals</button>
+                    <button type="button" id= "3" onclick ="check">Los Angeles Dodgers</button>
+                </div>
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
