Thu, Feb 23, 2023, 12:57 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,7 @@
             document.addEventListener('DomContentLoaded', function() {
                 function check()
                 {
-                    document.getElementByID("Y")
+                    document.getElementByID("answers").onclick = check;
                 }
 
             });
