Thu, Feb 23, 2023, 12:58 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,14 @@
             document.addEventListener('DomContentLoaded', function() {
                 function check()
                 {
-                    document.getElementByID("answers").onclick = check;
+                    document.getElementByID("answers").onclick = test;
+                }
+                function test(e)
+                {
+                    if (e.target.TagName == 'BUTTON')
+                    {
+                        
+                    }
                 }
 
             });
