Thu, Feb 23, 2023, 1:02 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -16,7 +16,10 @@
                 {
                     if (e.target.TagName == 'BUTTON')
                     {
-                        
+                        if (e.target.id == '1')
+                        {
+                            
+                        }
                     }
                 }
 
