Thu, Feb 23, 2023, 1:19 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,18 +10,9 @@
             document.addEventListener('DomContentLoaded', function() {
                 function check()
                 {
-                    document.getElementByID("answers").onclick = test;
+                    document.addEventListener("click", e)
                 }
-                function test(e)
-                {
-                    if (e.target.TagName == 'BUTTON')
-                    {
-                        if (e.target.id == '1')
-                        {
-                            
-                        }
-                    }
-                }
+
 
             });
         </script>
