Thu, Feb 23, 2023, 1:21 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,9 @@
             document.addEventListener('DomContentLoaded', function() {
                 function check()
                 {
-                    document.addEventListener("click", e)
+                    document.addEventListener("click", function() {
+                        
+                    })
                 }
 
 
