Thu, Feb 23, 2023, 1:44 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,11 @@
             document.addEventListener('DomContentLoaded', function() {
                 function check(event)
                 {
-                    let buttonid = event.target.id
+                    let buttonid = event.target.id;
+                    if (buttonid == '2')
+                    {
+                        event.target.
+                    }
                 }
 
 
