Thu, Feb 23, 2023, 1:45 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -13,11 +13,13 @@
                     let buttonid = event.target.id;
                     if (buttonid == '2')
                     {
-                        event.target.
+                        event.target.style.backgroundColor = "green";
+                    }
+                    else
+                    {
+                        event.target.style.backgroundColor = "red";
                     }
                 }
-
-
             });
         </script>
     </head>
