--- a/trivia/index.html
+++ b/trivia/index.html
@@ -40,6 +40,7 @@
                     <button type="button" id="1" onclick="check(event)">Houston Astros</button>
                     <button type="button" id="2" onclick="check(event)">St. Louis Cardinals</button>
                     <button type="button" id= "3" onclick ="check(event)">Los Angeles Dodgers</button>
+                    <button type="button">test allo why not working</button>
                 </div>
                 <!-- TODO: Add multiple choice question here -->
             </div>
