Thu, Feb 23, 2023, 1:56 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,7 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            document.addEventListener('DomContentLoaded', function() {
+            document.addEventListener('DOMContentLoaded', function() {
                 function check(event)
                 {
                     let buttonid = event.target.id;
