--- a/trivia/index.html
+++ b/trivia/index.html
@@ -8,7 +8,10 @@
         <script>
             // TODO: Add code to check answers to questions
             document.addEventListener('DOMContentLoaded', function() {
-                
+                function check(event) {
+                    var trigger = event.srcElement;
+                    
+                }
 
             });
         </script>
