Thu, Feb 23, 2023, 8:18 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,10 @@
             document.addEventListener('DOMContentLoaded', function() {
                 function check(event) {
                     var trigger = event.srcElement;
-                    
+                    if (trigger.id == '2')
+                    {
+                        
+                    }
                 }
 
             });
