Thu, Feb 23, 2023, 8:21 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -12,7 +12,11 @@
                     var trigger = event.srcElement;
                     if (trigger.id == '2')
                     {
-                        
+                        trigger.backgroundColor = "green";
+                    }
+                    else
+                    {
+                        trigger.backgroundColor = "red";
                     }
                 }
 
