Thu, Feb 23, 2023, 9:11 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,6 +7,17 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+            function check(event) {
+                    var trigger = event.srcElement;
+                    if (trigger.id == '2')
+                    {
+                        trigger.backgroundColor = "green";
+                    }
+                    else
+                    {
+                        trigger.backgroundColor = "red";
+                    }
+                }
         </script>
     </head>
     <body>
@@ -23,9 +34,9 @@
                 </p>
                 <br>
                 <div id = "answers">
-                    <button type="button" id="1" onclick="check(event)">Houston Astros</button>
-                    <button type="button" id="2" onclick="check(event)">St. Louis Cardinals</button>
-                    <button type="button" id="3" onclick ="check(event)">Los Angeles Dodgers</button>
+                    <button type="button" id="1" onclick ="check(event)">Houston Astros</button>
+                    <button type="button" id="2" >St. Louis Cardinals</button>
+                    <button type="button" id="3" >Los Angeles Dodgers</button>
                 </div>
             </div>
 
