--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,17 +7,6 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
-            function check(event) {
-                    var trigger = event.srcElement;
-                    if (trigger.id == '2')
-                    {
-                        trigger.backgroundColor = "green";
-                    }
-                    else
-                    {
-                        trigger.backgroundColor = "red";
-                    }
-                }
         </script>
     </head>
     <body>
@@ -39,6 +28,19 @@
                     <button type="button" id="3" >Los Angeles Dodgers</button>
                 </div>
             </div>
+            <script>
+                function check(event) {
+                    var trigger = event.srcElement;
+                    if (trigger.id == '2')
+                    {
+                        trigger.backgroundColor = "green";
+                    }
+                    else
+                    {
+                        trigger.backgroundColor = "red";
+                    }
+                }
+            </script>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
