--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,6 +7,20 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+            document.addEventListener("DOMContentLoaded",function() {
+            document.addEventListener("click",check(event));
+            function check(event) {
+                    var trigger = event.srcElement;
+                    if (trigger.id == '2')
+                    {
+                        trigger.backgroundColor = "green";
+                    }
+                    else
+                    {
+                        trigger.backgroundColor = "red";
+                    }
+                }
+            });
         </script>
     </head>
     <body>
@@ -29,17 +43,7 @@
                 </div>
             </div>
             <script>
-                function check(event) {
-                    var trigger = event.srcElement;
-                    if (trigger.id == '2')
-                    {
-                        trigger.backgroundColor = "green";
-                    }
-                    else
-                    {
-                        trigger.backgroundColor = "red";
-                    }
-                }
+
             </script>
 
             <div class="section">
