Thu, Feb 23, 2023, 9:23 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -37,7 +37,7 @@
                 </h3>
                 <br>
                 <div id = "answers">
-                    <button type="button" id="1" onclick ="check(event)">Houston Astros</button>
+                    <button type="submit" id="1" onclick ="check(event)">Houston Astros</button>
                     <button type="button" id="2" >St. Louis Cardinals</button>
                     <button type="button" id="3" >Los Angeles Dodgers</button>
                 </div>
