--- a/trivia/index.html
+++ b/trivia/index.html
@@ -9,7 +9,7 @@
             // TODO: Add code to check answers to questions
             document.addEventListener("DOMContentLoaded",function() {
             document.addEventListener("click",check(event));
-    
+
             });
         </script>
     </head>
@@ -27,7 +27,7 @@
                 </h3>
                 <br>
                 <div id = "answers">
-                    <button type="submit" id="1" onclick ="check(event)">Houston Astros</button>
+                    <button type="button" id="1" onclick ="check(event)">Houston Astros</button>
                     <button type="button" id="2" >St. Louis Cardinals</button>
                     <button type="button" id="3" >Los Angeles Dodgers</button>
                 </div>
