--- a/trivia/index.html
+++ b/trivia/index.html
@@ -8,9 +8,11 @@
         <script>
             // TODO: Add code to check answers to questions
             document.addEventListener("DOMContentLoaded",function() {
-            const ojas = document.querySelector("1");
+            const ojas = document.querySelector(".wrong");
             document.addEventListener("click",function() {
                 ojas.style.backgroundColor = "red";
+
+
             })
 
             });
@@ -30,10 +32,11 @@
                 </h3>
                 <br>
                 <div id = "answers">
-                    <button type="button" class="0" onclick ="check(event)">Houston Astros</button>
-                    <button type="button" class="1" >St. Louis Cardinals</button>
-                    <button type="button" class="0" >Los Angeles Dodgers</button>
+                    <button type="button" class="wrong" onclick ="check(event)">Houston Astros</button>
+                    <button type="button" class="right" >St. Louis Cardinals</button>
+                    <button type="button" class="wrong" >Los Angeles Dodgers</button>
                 </div>
+                <p id = "demo"></p>
             </div>
             <script>
 
