Thu, Feb 23, 2023, 9:55 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -12,6 +12,11 @@
             document.addEventListener("click",function() {
                 ojas.style.backgroundColor = "red";
 
+            const surana = document.querySelector(".right");
+            document.addEventListener("click",function(){
+                surana.style.backgroundColor = "green";
+            })
+
 
             })
 
