Thu, Feb 23, 2023, 10:08 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -9,7 +9,8 @@
             // TODO: Add code to check answers to questions
             document.addEventListener("DOMContentLoaded",function() {
 
-            const ojas = document.querySelector(".wrong");
+            const ojas = document.querySelectorAll(".wrong");
+            for (0, )
             ojas.addEventListener("click",function() {
                 ojas.style.backgroundColor = "red";
                 document.getElementById("demo").innerHTML = "Incorrect.";
