--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,7 +10,7 @@
             document.addEventListener("DOMContentLoaded",function() {
 
             const ojas = document.querySelectorAll(".wrong");
-            for (0, )
+            for (let x in ojas)
             ojas.addEventListener("click",function() {
                 ojas.style.backgroundColor = "red";
                 document.getElementById("demo").innerHTML = "Incorrect.";
