Thu, Feb 23, 2023, 10:32 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -40,11 +40,12 @@
                 </h3>
                 <br>
                 <div id = "answers">
-                    <button type="button" class="wrong" ">Houston Astros</button>
-                    <button type="button" class="right" >St. Louis Cardinals</button>
-                    <button type="button" class="wrong" >Los Angeles Dodgers</button>
+                    <button type="button" class="wrong">Houston Astros</button>
+                    <button type="button" class="right">St. Louis Cardinals</button>
+                    <button type="button" class="wrong">Los Angeles Dodgers</button>
+                    <button type="button" class="wrong">Boston Red Sox</button>
                 </div>
-                <p id = "demo"></p>
+                <h3 id = "demo"></h3>
             </div>
             <script>
 
