--- a/trivia/index.html
+++ b/trivia/index.html
@@ -55,7 +55,7 @@
                 <h2>Part 2: Free Response</h2>
                 <hr>
                 <!-- TODO: Add free response question here -->
-                
+                <input type="text">
             </div>
         </div>
     </body>
