Thu, Feb 23, 2023, 10:43 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -55,7 +55,8 @@
                 <h2>Part 2: Free Response</h2>
                 <hr>
                 <!-- TODO: Add free response question here -->
-                <input type="text">
+                <input type="text"> <button type="submit">Submit</button>
+                <h3 id ="check"></h3>
             </div>
         </div>
     </body>
