--- a/trivia/index.html
+++ b/trivia/index.html
@@ -23,7 +23,11 @@
                 document.getElementById("demo").innerHTML = "Correct!";
             })
 
-            
+            let rofl = document.querySelector(".lol");
+            rofl.addEventListener("click",function(){
+                let haha = document.querySelector(".haha")
+                
+            })
 
             });
         </script>
@@ -57,7 +61,7 @@
                 <h2>Part 2: Free Response</h2>
                 <hr>
                 <!-- TODO: Add free response question here -->
-                <input type="text"> <button type="submit">Submit</button>
+                <input type="text" class="hello"> <button type="submit" class ="lol">Submit</button>
                 <h3 id ="check"></h3>
             </div>
         </div>
