--- a/trivia/index.html
+++ b/trivia/index.html
@@ -25,8 +25,12 @@
 
             let rofl = document.querySelector(".lol");
             rofl.addEventListener("click",function(){
-                let haha = document.querySelector(".haha")
-                
+                let haha = document.querySelector(".haha");
+                if (haha.value = 'aaron judge')
+                {
+                    haha.
+                }
+
             })
 
             });
