Fri, Feb 24, 2023, 12:52 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -28,7 +28,7 @@
                 let haha = document.querySelector(".haha");
                 if (haha.value = 'aaron judge')
                 {
-                    haha.
+                    haha.style.backgroundColor =
                 }
 
             })
