Fri, Feb 24, 2023, 12:54 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -28,7 +28,7 @@
                 let haha = document.querySelector(".haha");
                 if (haha.value = 'aaron judge')
                 {
-                    haha.style.backgroundColor =
+                    haha.style.backgroundColor = "green";
                 }
 
             })
@@ -64,6 +64,7 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
+                <h3>Who won the American League MVP Award in 2022?</h3>
                 <!-- TODO: Add free response question here -->
                 <input type="text" class="hello"> <button type="submit" class ="lol">Submit</button>
                 <h3 id ="check"></h3>
