Fri, Feb 24, 2023, 12:59 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -25,10 +25,14 @@
 
             let rofl = document.querySelector(".lol");
             rofl.addEventListener("click",function(){
-                let haha = document.querySelector(".haha");
-                if (haha.value = 'aaron judge')
+                let haha = document.querySelector(".hello");
+                if (haha.value == 'aaron judge')
                 {
                     haha.style.backgroundColor = "green";
+                }
+                else
+                {
+                    haha.style.backgroundColor = "red";
                 }
 
             })
