Fri, Feb 24, 2023, 1:01 PM +08:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -29,10 +29,12 @@
                 if (haha.value == 'aaron judge')
                 {
                     haha.style.backgroundColor = "green";
+                    document.getElementById("check").innerHTML = "Correct!!!!!"
                 }
                 else
                 {
                     haha.style.backgroundColor = "red";
+                    document.getElementById()
                 }
 
             })
