--- a/trivia/index.html
+++ b/trivia/index.html
@@ -29,12 +29,12 @@
                 if (haha.value == 'aaron judge')
                 {
                     haha.style.backgroundColor = "green";
-                    document.getElementById("check").innerHTML = "Correct!!!!!"
+                    document.getElementById("check").innerHTML = "Correct!!!!!";
                 }
                 else
                 {
                     haha.style.backgroundColor = "red";
-                    document.getElementById()
+                    document.getElementById("check").innerHTML = "Incorrect. >:(";
                 }
 
             })
