--- a/trivia/index.html
+++ b/trivia/index.html
@@ -26,7 +26,7 @@
             let rofl = document.querySelector(".lol");
             rofl.addEventListener("click",function(){
                 let haha = document.querySelector(".hello");
-                if (toLowerCase(haha.value) == 'aaron judge')
+                if (haha.value.toLowerCase() == 'aaron judge')
                 {
                     haha.style.backgroundColor = "green";
                     document.getElementById("check").innerHTML = "Correct!!!!!";
