--- a/trivia/index.html
+++ b/trivia/index.html
@@ -26,7 +26,7 @@
             let rofl = document.querySelector(".lol");
             rofl.addEventListener("click",function(){
                 let haha = document.querySelector(".hello");
-                if (haha.value.toLowerCase() == 'aaron judge')
+                if (haha.value.toLowerCase() == 'waylen')
                 {
                     haha.style.backgroundColor = "green";
                     document.getElementById("check").innerHTML = "Correct!!!!!";
@@ -70,7 +70,7 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>Who won the American League MVP Award in 2022?</h3>
+                <h3>Who the weakest?</h3>
                 <!-- TODO: Add free response question here -->
                 <input type="text" class="hello"> <button type="submit" class ="lol">Submit</button>
                 <h3 id ="check"></h3>
