--- a/trivia/index.html
+++ b/trivia/index.html
@@ -26,15 +26,15 @@
             let rofl = document.querySelector(".lol");
             rofl.addEventListener("click",function(){
                 let haha = document.querySelector(".hello");
-                if (haha.value.toLowerCase() == 'waylen')
+                if (haha.value.toLowerCase() == 'sandy alcantara')
                 {
                     haha.style.backgroundColor = "green";
-                    document.getElementById("check").innerHTML = "Correct!!!!!";
+                    document.getElementById("check").innerHTML = "Correct!";
                 }
                 else
                 {
                     haha.style.backgroundColor = "red";
-                    document.getElementById("check").innerHTML = "Incorrect. >:(";
+                    document.getElementById("check").innerHTML = "Incorrect";
                 }
 
             })
@@ -70,7 +70,7 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>Who the weakest?</h3>
+                <h3>Who won the National League Cy Young Award in 2022?</h3>
                 <!-- TODO: Add free response question here -->
                 <input type="text" class="hello"> <button type="submit" class ="lol">Submit</button>
                 <h3 id ="check"></h3>
