--- a/homepage/aboutme.html
+++ b/homepage/aboutme.html
@@ -12,7 +12,7 @@
       <div class="navtabs">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/index.html" style="font-size: 3rem">Homepage</a>
+          <a class="navbar-brand" href="index.html" style="font-size: 3rem">Homepage</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
