--- a/homepage/aboutme.html
+++ b/homepage/aboutme.html
@@ -19,13 +19,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item px-4">
-                <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/ohtanivstroutpart1.html">Ohtani vs Trout: Part 1</a>
+                <a class="nav-link" href="ohtanivstroutpart1.html">Ohtani vs Trout: Part 1</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/ohtanivstroutpart2.html">Ohtani Vs Trout: Part 2</a>
+                <a class="nav-link" href="ohtanivstroutpart2.html">Ohtani Vs Trout: Part 2</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/aboutme.html">About Me</a>
+                <a class="nav-link" href="aboutme.html">About Me</a>
               </li>
             </ul>
           </div>
