Tue, Oct 24, 2023, 5:03 PM +08:00

--- a/homepage/ohtanivstroutpart1.html
+++ b/homepage/ohtanivstroutpart1.html
@@ -61,7 +61,7 @@
             <br>
             <strong>Pitch 2 :</strong> A <strong>100!</strong> mph fastball <p class="fs-3">right down the middle.</p><br>
             <div class="text-center">
-              <img src="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/TROUTSWING1.jpg" class="rounded" alt="Swing 1" width="500" style="padding-top:50px; padding-bottom:50px">
+              <img src="TROUTSWING1.jpg" class="rounded" alt="Swing 1" width="500" style="padding-top:50px; padding-bottom:50px">
             </div>
             <br>
               <p>One thing you need to know about Trout is that he is <strong>realllly good </strong>at hitting fastballs.</p>
