Tue, Oct 24, 2023, 5:04 PM +08:00

--- a/homepage/ohtanivstroutpart1.html
+++ b/homepage/ohtanivstroutpart1.html
@@ -95,6 +95,6 @@
             </figcaption>
           </figure>
         </div>
-        <div class="bigword">Continued in <a href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/ohtanivstroutpart2.html">Part 2.</a></div>
+        <div class="bigword">Continued in <a href="ohtanivstroutpart2.html">Part 2.</a></div>
     </body>
 </html>
