Tue, Oct 24, 2023, 5:07 PM +08:00

--- a/homepage/ohtanivstroutpart1.html
+++ b/homepage/ohtanivstroutpart1.html
@@ -13,20 +13,20 @@
       <div class="navtabs">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/index.html" style="font-size: 3rem">Homepage</a>
+          <a class="navbar-brand" href="index.html" style="font-size: 3rem">Homepage</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item px-4">
-                  <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/ohtanivstroutpart1.html">Ohtani vs Trout: Part 1</a>
+                  <a class="nav-link" href="ohtanivstroutpart1.html">Ohtani vs Trout: Part 1</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/ohtanivstroutpart2.html">Ohtani Vs Trout: Part 2</a>
+                <a class="nav-link" href="ohtanivstroutpart2.html">Ohtani Vs Trout: Part 2</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="https://luoq1-xu-effective-space-parakeet-gp6r5x799q5hvqg6-8080.preview.app.github.dev/aboutme.html">About Me</a>
+                <a class="nav-link" href="aboutme.html">About Me</a>
               </li>
             </ul>
           </div>
