--- a/homepage/test.html
+++ b/homepage/test.html
@@ -74,7 +74,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="https://www.apple.com/ac/globalnav/5/en_US/images/globalnav/apple/image_large.svg" alt="Apple"></a>
+			<a class="navbar-brand" href="#"><img src="baseball.png" alt="Apple"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
