--- a/homepage/test2.html
+++ b/homepage/test2.html
@@ -112,81 +112,68 @@
 		</div>
 	</nav>
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="https://www.apple.com/v/iphone-13/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPhone 13">
-				<div class="carousel-caption">
-					<h1>iPhone 13</h1>
-					<p>The ultimate iPhone.</p>
-				</div>
-			</div>
-			<div class="carousel-item">
-				<img src="https://www.apple.com/v/ipad-pro/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPad Pro">
-				<div class="carousel-caption">
-					<h1>iPad Pro</h1>
-					<p>Supercharged by the Apple M1 chip.</p>
-				</div>
-			</div>
-			<div class="carousel-item">
-				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
-				<div class="carousel-caption">
-					<h1>MacBook Pro</h1>
-					<p>The ultimate pro notebook.</p>
-				</div>
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
-	<div class="container">
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">iPhone 13 and iPhone 13 mini</h2>
-				<p class="lead">The most advanced dual-camera system ever on iPhone. Lightning-fast A15 Bionic chip. A big leap in battery life. Durable design. Superfast 5G. And a brighter Super Retina XDR display.</p>
-			</div>
-			<div class="col-md-5 featurette-image">
-				<img src="https://www.apple.com/v/iphone-13/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPhone 13">
-			</div>
-		</div>
-		<hr class="featurette-divider">
-		<div class="row featurette">
-			<div class="col-md-7 order-md-2">
-				<h2 class="featurette-heading">iPad Pro</h2>
-				<p class="lead">The ultimate iPad experience. Now with the breakthrough M1 chip, the new Liquid Retina XDR display, and more.</p>
-			</div>
-			<div class="col-md-5 order-md-1 featurette-image">
-				<img src="https://www.apple.com/v/ipad-pro/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPad Pro">
-			</div>
-		</div>
-		<hr class="featurette-divider">
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">MacBook Pro</h2>
-				<p class="lead">The ultimate pro notebook, MacBook Pro features Apple's M1 chip for up to 2.8x faster CPU performance. A stunning Retina display with True Tone technology. Backlit Magic Keyboard. And blazing-fast SSD storage.</p>
-			</div>
-			<div class="col-md-5 featurette-image">
-				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
-			</div>
-		</div>
-		<hr class="featurette-divider">
-	</div>
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<img src="https://www.apple.com/ac/globalnav/5/en_US/images/globalnav/apple/image_large.svg" alt="Apple">
-				</div>
+        <div class="container">
+            <img src="https://library.sportingnews.com/2023-03/ohtani%20trout%20wbc%20032123%20ftr%20getty.jpg" alt="Godzilla Vs Captain America." class="img-fluid">
+            <br>
+            <div class="bigword">The Backstory</div>
+            <div class="bodytext">
+              <p>If you don't already know who these two are, they are two of the best baseball players currently active.
+              Think Lionel Messi and Cristiano Ronaldo, if they played on the same mediocre team. I digress. Now, bottom of the ninth,
+              Finals of the World Baseball Classic, 2 outs, Japan leading 3-2 against the USA, Shohei Ohtani for Japan vs Mike Trout for the USA.
+              If you don't understand what that means, think finals of the FIFA World Cup, 90th minute, one team leading 1-0, penalty for the team
+                that is behind. Veeery high presure situation.</p>
+                <br>
+              <p>Now, even if trout hits a homerun (best possible outcome), the score will still be tied 3-3. However, the beauty of baseball is that anything can happen. If trout
+              wins this at bat, the momentum shifts massively and the USA has a real chance of making a comeback. Japan and the USA have been undoubtedly the two best teams in this tournament,
+              and neither team deserved to lose.</p>
+            </div>
+            <div class="bigword">The At bat</div>
+              <strong>Pitch 1 :</strong> An 88 mph slider with good movement.<br>
+            <div class="text-center">
+            <video autoplay loop muted height="800" width="500">
+              <source src="BALL1.mp4" type="video/mp4">
+            </video>
+            </div>
+              <p>Good movement, but trout doesn't Bite. Ball 1.</p>
+            <p><strong>Count : 1 - 0</strong></p>
+            <br>
+            <strong>Pitch 2 :</strong> A <strong>100!</strong> mph fastball <p class="fs-3">right down the middle.</p><br>
+            <div class="text-center">
+              <img src="TROUTSWING1.jpg" class="rounded" alt="Swing 1" width="500" style="padding-top:50px; padding-bottom:50px">
+            </div>
+            <br>
+              <p>One thing you need to know about Trout is that he is <strong>realllly good </strong>at hitting fastballs.</p>
+            <br>
+            <div class="text-center">
+              <video autoplay loop muted height="800" width="500">
+                <source src="STRIKE1.mp4" type="video/mp4">
+              </video>
+            </div>
+                <p>A swing and a miss. Strike 1.</p>
+              <p><strong>Count : 1 - 1</strong></p>
+              <br>
+              <strong>Pitch 3 :</strong> A <strong>100mph</strong> Fastball on the outer corner.
+              <div class="text-center">
+                <video autoplay loop muted height="800" width="500">
+                  <source src="BALL2.mp4" type="video/mp4">
+                </video>
+              </div>
+              <p>Juuuuust a little bit outside. The ball <strong>cuts</strong>, meaning that it moves slightly outside. Really good <abbr title="Take refers to not swinging at a pitch.">take</abbr>
+                 by trout there. It would have been difficult to do damage on a fastball low and outside, especially one with such velocity. The pitch also looked like it could have clipped the
+                strike zone.</p><br>
+                <strong class="text-center">Count : 2 - 1</strong>
+              </div>
+        <div class="text-center">
+          <figure>
+            <blockquote class="blockquote">
+              <p>Baseball is the only field of endeavor where a man can succeed three times out of ten and be considered a good performer.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Ted Williams
+            </figcaption>
+          </figure>
+        </div>
+        <div class="bigword">Continued in <a href="ohtanivstroutpart2.html">Part 2.</a></div>
 				<div class="col-md-8">
 					<ul class="list-inline">
 						<li class="list-inline-item"><a class="footer-link" href="#">iPhone</a></li>
