Tue, Oct 24, 2023, 5:19 PM +08:00

--- a/homepage/test2.html
+++ b/homepage/test2.html
@@ -74,7 +74,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="baseball.png" alt="Apple"></a>
+			<a class="navbar-brand" href="test.html"><img src="baseball.png" alt="My Homepage"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
