--- a/homepage/test.html
+++ b/homepage/test.html
@@ -74,14 +74,14 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="baseball.png" alt="Apple"></a>
+			<a class="navbar-brand" href="test.html"><img src="baseball.png" alt="My Homepage"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">iPhone</a>
+						<a class="nav-link" href="test2.html">WBC: Trout vs Ohtani</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">iPad</a>
