Tue, Oct 24, 2023, 5:21 PM +08:00

--- a/homepage/test2.html
+++ b/homepage/test2.html
@@ -81,7 +81,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">iPhone</a>
+						<a class="nav-link" href="#">WBC: Trout vs Ohtani</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">iPad</a>
