Tue, Oct 24, 2023, 5:24 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -186,7 +186,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img src="https://www.apple.com/ac/globalnav/5/en_US/images/globalnav/apple/image_large.svg" alt="Apple">
+					<img src="baseball.png" alt="Baseball">
 				</div>
 				<div class="col-md-8">
 					<ul class="list-inline">
