Tue, Oct 24, 2023, 5:29 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -119,10 +119,10 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="https://www.apple.com/v/iphone-13/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPhone 13">
+				<img src="mikeshohei.webp" alt="WBC">
 				<div class="carousel-caption">
-					<h1>iPhone 13</h1>
-					<p>The ultimate iPhone.</p>
+					<h1>WBC Showdown: Ohtani Vs Trout</h1>
+					<p>Rewind back to this instant classic. Take a deep dive down one of the electrifying at-bats in history.</p>
 				</div>
 			</div>
 			<div class="carousel-item">
