Tue, Oct 24, 2023, 5:31 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -152,11 +152,11 @@
 	<div class="container">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">iPhone 13 and iPhone 13 mini</h2>
-				<p class="lead">The most advanced dual-camera system ever on iPhone. Lightning-fast A15 Bionic chip. A big leap in battery life. Durable design. Superfast 5G. And a brighter Super Retina XDR display.</p>
+				<h2 class="featurette-heading">WBC Showdown: Ohtani Vs Trout</h2>
+				<p class="lead">Rewind back to this instant classic. Take a deep dive down one of the electrifying at-bats in history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="https://www.apple.com/v/iphone-13/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPhone 13">
+				<img src="mikeshohei.webp" alt="WBC">
 			</div>
 		</div>
 		<hr class="featurette-divider">
