--- a/homepage/test.html
+++ b/homepage/test.html
@@ -98,7 +98,7 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="mikeshohei.webp" alt="WBC">
+				<img src="mikeshohei.webp" alt="WBC" width=100%>
 				<div class="carousel-caption">
 					<h1>WBC Showdown: Ohtani Vs Trout</h1>
 					<p>Rewind back to this instant classic. Take a deep dive down one of the electrifying at-bats in history.</p>
