Tue, Oct 24, 2023, 5:39 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -105,10 +105,10 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="https://www.apple.com/v/ipad-pro/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPad Pro">
+				<img src="montgomery.webp" alt="Montgomery" width="100%">
 				<div class="carousel-caption">
-					<h1>iPad Pro</h1>
-					<p>Supercharged by the Apple M1 chip.</p>
+					<h1>Jordan Montgomery</h1>
+					<p>How has this texas ace</p>
 				</div>
 			</div>
 			<div class="carousel-item">
