Tue, Oct 24, 2023, 5:40 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -108,7 +108,7 @@
 				<img src="montgomery.webp" alt="Montgomery" width="100%">
 				<div class="carousel-caption">
 					<h1>Jordan Montgomery</h1>
-					<p>How has this texas ace</p>
+					<p>How has this texas ace reinvented himself?</p>
 				</div>
 			</div>
 			<div class="carousel-item">
