Tue, Oct 24, 2023, 5:42 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -112,10 +112,10 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
+				<img src="nola.jpg" alt="Phillies">
 				<div class="carousel-caption">
-					<h1>MacBook Pro</h1>
-					<p>The ultimate pro notebook.</p>
+					<h1>Phillies Pitching</h1>
+					<p>A tale of two stores</p>
 				</div>
 			</div>
 		</div>
