Tue, Oct 24, 2023, 5:44 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -112,10 +112,10 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="nola.jpg" alt="Phillies">
+				<img src="nola.jpg" alt="Phillies" width="100%">
 				<div class="carousel-caption">
 					<h1>Phillies Pitching</h1>
-					<p>A tale of two stores</p>
+					<p>Boon Or Bane?</p>
 				</div>
 			</div>
 		</div>
