Tue, Oct 24, 2023, 5:45 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="nola.jpg" alt="Phillies" width="100%">
+				<img src="nola.jpg" alt="Phillies" width="100%" margin-top="300">
 				<div class="carousel-caption">
 					<h1>Phillies Pitching</h1>
 					<p>Boon Or Bane?</p>
