--- a/homepage/test.html
+++ b/homepage/test.html
@@ -100,8 +100,8 @@
 			<div class="carousel-item active">
 				<img src="mikeshohei.webp" alt="WBC" width=100%>
 				<div class="carousel-caption">
-					<h1>WBC Showdown: Ohtani Vs Trout</h1>
-					<p>Rewind back to this instant classic. Take a deep dive down one of the electrifying at-bats in history.</p>
+					<h1>Ohtani Vs Trout</h1>
+					<p>Rewind back to this instant classic.</p>
 				</div>
 			</div>
 			<div class="carousel-item">
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="nola.jpg" alt="Phillies" width="100%" margin-top="300">
+				<img src="nola.jpg" alt="Phillies" width="100%" height="80%">
 				<div class="carousel-caption">
 					<h1>Phillies Pitching</h1>
 					<p>Boon Or Bane?</p>
