Tue, Oct 24, 2023, 6:37 PM +08:00

--- a/homepage/test2.html
+++ b/homepage/test2.html
@@ -154,21 +154,27 @@
           </figure>
         </div>
         <div class="bigword">Continued in <a href="ohtanivstroutpart2.html">Part 2.</a></div>
-				<div class="col-md-8">
-					<ul class="list-inline">
-						<li class="list-inline-item"><a class="footer-link" href="#">iPhone</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">iPad</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Mac</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Watch</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">TV</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Music</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Support</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Privacy Policy</a></li>
-						<li class="list-inline-item"><a class="footer-link" href="#">Terms of Use</a></li>
-					</ul>
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="baseball.png" alt="Baseball">
+					</div>
+					<div class="col-md-8">
+						<ul class="list-inline">
+							<li class="list-inline-item"><a class="footer-link" href="#">iPhone</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">iPad</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Mac</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Watch</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">TV</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Music</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Support</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Privacy Policy</a></li>
+							<li class="list-inline-item"><a class="footer-link" href="#">Terms of Use</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 </body>
 </html>
