Tue, Oct 24, 2023, 6:42 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -135,7 +135,7 @@
 				<p class="lead">Rewind back to this instant classic. Take a deep dive down one of the most electrifying at-bats in baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="mikeshohei.webp" alt="WBC">
+				<img src="mikeshohei.webp" alt="WBC>
 			</div>
 		</div>
 		<hr class="featurette-divider">
