Tue, Oct 24, 2023, 6:47 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -135,17 +135,17 @@
 				<p class="lead">Rewind back to this instant classic. Take a deep dive down one of the most electrifying at-bats in baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="mikeshohei.webp" alt="WBC>
+				<img src="mikeshohei.webp" alt="WBC">
 			</div>
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7 order-md-2">
-				<h2 class="featurette-heading">iPad Pro</h2>
-				<p class="lead">The ultimate iPad experience. Now with the breakthrough M1 chip, the new Liquid Retina XDR display, and more.</p>
+				<h2 class="featurette-heading">2023 Braves</h2>
+				<p class="lead">104 game winners. What happened?</p>
 			</div>
 			<div class="col-md-5 order-md-1 featurette-image">
-				<img src="https://www.apple.com/v/ipad-pro/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="iPad Pro">
+				<img src="braves.jpg" alt="Braves">
 			</div>
 		</div>
 		<hr class="featurette-divider">
