Tue, Oct 24, 2023, 6:48 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -98,7 +98,7 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="mikeshohei.webp" alt="WBC" width=100%>
+				<img src="troutohtani.webp" alt="WBC" width=100%>
 				<div class="carousel-caption">
 					<h1>Ohtani Vs Trout</h1>
 					<p>Rewind back to this instant classic.</p>
