--- a/homepage/test.html
+++ b/homepage/test.html
@@ -108,14 +108,14 @@
 				<img src="montgomery.webp" alt="Montgomery" width="100%">
 				<div class="carousel-caption">
 					<h1>Jordan Montgomery</h1>
-					<p>How has this texas ace reinvented himself?</p>
+					<p>How has the Texas ace reinvented himself?</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="nola.jpg" alt="Phillies" width="100%" height="80%">
 				<div class="carousel-caption">
 					<h1>Phillies Pitching</h1>
-					<p>Boon Or Bane?</p>
+					<p>Boon or bane?</p>
 				</div>
 			</div>
 		</div>
