Tue, Oct 24, 2023, 7:07 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -151,8 +151,8 @@
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">MacBook Pro</h2>
-				<p class="lead">The ultimate pro notebook, MacBook Pro features Apple's M1 chip for up to 2.8x faster CPU performance. A stunning Retina display with True Tone technology. Backlit Magic Keyboard. And blazing-fast SSD storage.</p>
+				<h2 class="featurette-heading">Remarkable Relievers/h2>
+				<p class="lead">As the 2023 season draws to a close, </p>
 			</div>
 			<div class="col-md-5 featurette-image">
 				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
