--- a/homepage/test.html
+++ b/homepage/test.html
@@ -152,7 +152,7 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Remarkable Relievers/h2>
-				<p class="lead">As the 2023 season draws to a close, </p>
+				<p class="lead">As the 2023 season draws to a close, re</p>
 			</div>
 			<div class="col-md-5 featurette-image">
 				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
