Tue, Oct 24, 2023, 7:15 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -140,7 +140,7 @@
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
-			<div class="col-md-7 order-md-2">
+			<div class="col-md-7 order-md-5">
 				<h2 class="featurette-heading">2023 Braves</h2>
 				<p class="lead">104 game winners. What happened?</p>
 			</div>
@@ -151,11 +151,11 @@
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">Remarkable Relievers/h2>
+				<h2 class="featurette-heading">Remarkable Relievers</h2>
 				<p class="lead">As the 2023 season draws to a close, these are the relief pitchers you should know about.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="https://www.apple.com/v/macbook-pro-14-and-16/a/images/overview/hero/hero__dvsx2xq4qk6y_large_2x.jpg" alt="MacBook Pro">
+				<img src="foley.webp" alt="Foley">
 			</div>
 		</div>
 		<hr class="featurette-divider">
