--- a/homepage/test.html
+++ b/homepage/test.html
@@ -140,10 +140,10 @@
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
-			<div class="col-md-5 order-md-5 featurette-image">
+			<div class="col-md-5 featurette-image">
 				<img src="braves.jpg" alt="Braves">
 			</div>
-			<div class="col-md-8 order-md-5">
+			<div class="col-md-7">
 				<h2 class="featurette-heading">2023 Braves</h2>
 				<p class="lead">104 game winners. What happened?</p>
 			</div>
