Tue, Oct 24, 2023, 7:25 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -135,15 +135,15 @@
 				<p class="lead">Take a deep dive down one of the most electrifying at-bats in baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="mikeshohei.webp" alt="WBC">
+				<img src="mikeshohei.webp" alt="WBC" width="100%">
 			</div>
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
-			<div class="col-md-5 featurette-image">
-				<img src="braves.jpg" alt="Braves">
+			<div class="col-md-7 featurette-image">
+				<img src="braves.jpg" alt="Braves" width="100%">
 			</div>
-			<div class="col-md-7">
+			<div class="col-md-5">
 				<h2 class="featurette-heading">2023 Braves</h2>
 				<p class="lead">104 game winners. What happened?</p>
 			</div>
@@ -155,7 +155,7 @@
 				<p class="lead">As the 2023 season draws to a close, these are the relief pitchers you should know about.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="foley.webp" alt="Foley">
+				<img src="foley.webp" alt="Foley" width="100%">
 			</div>
 		</div>
 		<hr class="featurette-divider">
