--- a/homepage/test.html
+++ b/homepage/test.html
@@ -132,7 +132,7 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">WBC Showdown: Ohtani Vs Trout</h2>
-				<p class="lead">Take a deep dive down one of the most electrifying at-bats in baseball history.</p>
+				<p class="lead">Take a deep dive down one of the most electrifying at-bats in recent baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
 				<img src="mikeshohei.webp" alt="WBC" width="100%">
