Tue, Oct 24, 2023, 7:27 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -131,7 +131,7 @@
 	<div class="container">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">WBC Showdown: Ohtani Vs Trout</h2>
+				<h2 class="featurette-heading" href="test2.html">WBC Showdown: Ohtani Vs Trout</h2>
 				<p class="lead">Take a deep dive down one of the most electrifying at-bats in recent baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
