Tue, Oct 24, 2023, 7:28 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -84,7 +84,7 @@
 						<a class="nav-link" href="test2.html">WBC: Trout vs Ohtani</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">iPad</a>
+						<a class="nav-link" href="#">Baseball Analysis</a>
 					</li>
 				</ul>
 			</div>
@@ -98,7 +98,7 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="photo_l.jpg" alt="WBC" width=100%>
+				<a href="test2.html"><img src="photo_l.jpg" alt="WBC" width=100%></a>
 				<div class="carousel-caption">
 					<h1>Ohtani Vs Trout</h1>
 					<p>Rewind back to this instant classic.</p>
