--- a/homepage/test.html
+++ b/homepage/test.html
@@ -135,7 +135,7 @@
 				<p class="lead">Take a deep dive down one of the most electrifying at-bats in recent baseball history.</p>
 			</div>
 			<div class="col-md-5 featurette-image">
-				<img src="mikeshohei.webp" alt="WBC" width="100%">
+				<a href="test2.html"><img src="mikeshohei.webp" alt="WBC" width="100%"></a>
 			</div>
 		</div>
 		<hr class="featurette-divider">
