--- a/homepage/test.html
+++ b/homepage/test.html
@@ -84,7 +84,10 @@
 						<a class="nav-link" href="test2.html">WBC: Trout vs Ohtani</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Baseball Analysis</a>
+						<a class="nav-link" href="#">2023 Braves</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Playoff Philies</a>
 					</li>
 				</ul>
 			</div>
