--- a/homepage/test.html
+++ b/homepage/test.html
@@ -148,7 +148,7 @@
 			</div>
 			<div class="col-md-5">
 				<h2 class="featurette-heading">2023 Braves</h2>
-				<p class="lead">104 game winners. What happened?</p>
+				<p class="lead">104 game winners. First round playoff exit. What happened?</p>
 			</div>
 		</div>
 		<hr class="featurette-divider">
