Tue, Oct 24, 2023, 7:47 PM +08:00

--- a/homepage/test2.html
+++ b/homepage/test2.html
@@ -95,7 +95,7 @@
         <div class="container">
             <img src="https://library.sportingnews.com/2023-03/ohtani%20trout%20wbc%20032123%20ftr%20getty.jpg" alt="Godzilla Vs Captain America." class="img-fluid">
             <br>
-            <div class="bigword">The Backstory</div>
+            <h2 class="featurette-heading">The Backstory</h2>
             <div class="bodytext">
               <p>If you don't already know who these two are, they are two of the best baseball players currently active.
               Think Lionel Messi and Cristiano Ronaldo, if they played on the same mediocre team. I digress. Now, bottom of the ninth,
@@ -107,7 +107,7 @@
               wins this at bat, the momentum shifts massively and the USA has a real chance of making a comeback. Japan and the USA have been undoubtedly the two best teams in this tournament,
               and neither team deserved to lose.</p>
             </div>
-            <div class="bigword">The At bat</div>
+            <h2 class="featurette-heading">The At bat</h2>
               <strong>Pitch 1 :</strong> An 88 mph slider with good movement.<br>
             <div class="text-center">
             <video autoplay loop muted height="800" width="500">
