Tue, Oct 24, 2023, 8:12 PM +08:00

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -48,8 +48,8 @@
 			object-fit: cover;
 		}
 		.featurette-image {
-			margin-top: 100px;
-			margin-bottom: 100px;
+			margin-top: 50px;
+			margin-bottom: 50px;
 		}
 		.footer {
 			background-color: #f2f2f2;
@@ -132,6 +132,7 @@
 		</a>
 	</div>
 	<div class="container">
+		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading" href="test2.html">WBC Showdown: Ohtani Vs Trout</h2>
@@ -141,6 +142,7 @@
 				<a href="test2.html"><img src="mikeshohei.webp" alt="WBC" width="100%"></a>
 			</div>
 		</div>
+		<hr>
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7 featurette-image">
